# docs/swagger.yaml
@@ -49,6 +49,30 @@ info:
   version: "1.0"
 paths:
   /api/v1/users/{id}/wallets:
+    delete:
+      consumes:
+      - application/json
+      description: Delete wallet by user Id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/wallet.Wallet'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/wallet.Err'
+      summary: Delete wallet by user Id
+      tags:
+      - wallet
     get:
       consumes:
       - application/json
